tests/sources/invalid/arrays/array_access_syntax_errors.fire
// Malformed array access expressions.
int32[] arr = [1, 2, 3];

// Missing index expression
int32 a = arr[;

// Missing ']' after index
int32 b = arr[1;
